# LeornOpenGL

./: .clang-format  .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  LeornOpenGL.sln  LeornOpenGL.vcxproj  LeornOpenGL.vcxproj.filters  Makefile  cmake_install.cmake
glsl shaders/: shader1.fs
includes/: glfw3.lib
includes/classes/: Shader.h  camera.h  mesh.h  model.h
includes/glad/: glad.h
objects/face/: cuerpo3.mtl
shaders/: advanced_lighting.fs  advanced_lighting.vs  asteroids.vs  bloom.fs  bloom.vs  bloom_final.fs  blur.fs  buffer.fs  buffer.vs  cubeMap.fs  debug_depth.fs  deferred_light_box.fs  deferred_light_box.vs  deferred_shading.fs  geometryshader.gs  hdr.fs  irradiance_convolution.fs  light_box.fs  light_cube.fs  lighting_hdr.fs  lighting_hdr.vs  normal_mapping.fs  normal_mapping.vs  normalview.fs  normalview.gs  parallax_shader.fs  parallax_shader.vs  pbr.fs  pbr.vs  pbr2.fs  point_shadows.fs  point_shadows.vs  point_shadows_depth.fs  point_shadows_depth.gs  shader1.fs  shader1.vs  shader2.fs  shader2.vs  shadow_mapping.fs  shadow_mapping.vs  (+6 more)
src/: main.cpp
src/vendors/: glad.c
